6.25.6 (17-08-2021)
- Bug fix: Prevent stack overflow deleting dismissals that are part of curriculum aggregations

6.25.5 (17-08-2021)
- Improvement: Prevent curriculum aggregation child enrolment if parent group is not enroled

6.25.4 (26-07-2021)
- Refactor: Due to TreasuryDomainException and AcademicTreasuryDomainException hierarchy changes, this module must be built in order for the platform to run

6.25.3 (19-07-2021)
- Improvement: Change back the jsp back urls until the new menu is installed

6.25.2 (07-07-2021)
- Improvement: Add new screen to select the registration before creating a new ulisboa service request

6.25.1 (30-04-2021)
- Bug fix: Increase the size of units returned when filling the precedent degree information
- Bug fix: Show the correct match in case the name is all written

6.25.0 (11-04-2021)
- Refactor: Digital Payment Requests

6.24.1 (30-03-2021)
- Bug fix: Excluding uilayer paths form ulisboa redirecting filtering

6.24.0 (24-03-2021)
- New feature: Added boolean to disable blue record

6.23.1 (16-03-2021)
- Improvement: Added health card number to registration history report

6.23.0 (12-03-2021)
- Refactor: Remake the screens for managing the degree information

6.22.2 (21-01-2021)
- Bug fix: Replaced reference to deprecated method in lessons management

6.22.1 (20-01-2021)
- Improvement: Add new schoolLevelType to the allowed list in qualification view component

6.22.0 (06-01-2021)
- Improvement: Improvement academic permission service

6.21.3 (19-11-2020)
- Bug fix: Fix broken back navigation from professorship creation

6.21.2 (14-11-2020)
- Refactor: Remove usage of bolonha degree type (deprecated slot)

6.21.1 (10-11-2020)
- Refactor: Upgrade dependency of fenixedu-academic-core (cleanup deprecated execution course slots and methods)

6.21.0 (09-11-2020)
- New feature: Added isBlueRecordAnswered to PersonUlisboaSpecificationsByExecutionYear

6.20.5 (05-11-2020)