@@ -1,3 +1,5 @@
+- Bug fix: Show all service request from a student if searching with a number
+
 6.25.6 (17-08-2021)
 - Bug fix: Prevent stack overflow deleting dismissals that are part of curriculum aggregations
 
